--- a/gb/18/7/10/n10550388.md
+++ b/gb/18/7/10/n10550388.md
@@ -1,16 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ldrwvv219/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ldrwvv219/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ldrwvv219/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>医疗外交添佳话 马偕医院救援友邦重症男婴</h2>
-<a href="https://rawcdn.githack.com/ldrwvv219/vd/master/jump2.htm?id=2UMn5"><img width="600" src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ldrwvv219/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d22qnxkzs9qeoh.cloudfront.net/D6k2UMn5g"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-<p>【大纪元2018年07月10日讯】台湾技术成功完成<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97.md#1">医疗</a>外交。台湾南太平洋<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%8F%8B%E9%82%A6.md#1">友邦</a><ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%90%89%E9%87%8C%E5%B7%B4%E6%96%AF.md#1">吉里巴斯</a><ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97.md#1">医疗</a>资源匮乏，在马偕医院协助下，<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E8%BD%AC%E8%AF%8A.md#1">转诊</a>来台就医人数已超过300人。</p>
-<p>马偕医院医护人员与<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%90%89%E9%87%8C%E5%B7%B4%E6%96%AF.md#1">吉里巴斯</a>病患以及家属开心合影，吉里巴斯大使蓝黛西（Tessie Eria Lambourne）也亲自出席记者会，从吉里巴斯<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E8%BD%AC%E8%AF%8A.md#1">转诊</a>来到台湾马偕医院接受治疗的病患已超过300位。</p>
+<p>【大纪元2018年07月10日讯】台湾技术成功完成<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97.md#1">医疗</a>外交。台湾南太平洋<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%8B%E9%82%A6.md#1">友邦</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%90%89%E9%87%8C%E5%B7%B4%E6%96%AF.md#1">吉里巴斯</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97.md#1">医疗</a>资源匮乏，在马偕医院协助下，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BD%AC%E8%AF%8A.md#1">转诊</a>来台就医人数已超过300人。</p>
+<p>马偕医院医护人员与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%90%89%E9%87%8C%E5%B7%B4%E6%96%AF.md#1">吉里巴斯</a>病患以及家属开心合影，吉里巴斯大使蓝黛西（Tessie Eria Lambourne）也亲自出席记者会，从吉里巴斯<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BD%AC%E8%AF%8A.md#1">转诊</a>来到台湾马偕医院接受治疗的病患已超过300位。</p>
 <p>吉里巴斯病患Tieri Tamoa说：“我来台湾之前不能行走，但是现在我能站立行走，在不久之后就能复原，这是来台湾很奇妙的体验。”</p>
-<p><strong><span style="color: #0000ff;">观看完整影片?</span></strong>	<a type='text/javaa' src='//vs.youmaker.com/js/jwplayer/jwplayer8-all.js'></a>
-	<link rel='stylesheet' target="_blank" href='//vs.youmaker.com/css/api2.css' type='text/css' media='all' />
-<div class="video_fit_container"><a ><a href="https://rawcdn.githack.com/ldrwvv219/vd/master/jump2.htm?id=2UMn5"><img width="600" src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ldrwvv219/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a="56.25%" src="//vs.youmaker.com/2018/0710/7cca3577-56a6-4f17-6fc5-b0676dcc66d0?r=16x9&amp;s=720x480&api=2&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F7%2F10%2Fn10550388.md#1"></a></div></p>
+<p><strong><span style="color: #0000ff;">观看完整影片?</span></strong><div class="video_fit_container epoch_player"><div class="player-container" id="player-container-7cca3577-56a6-4f17-6fc5-b0676dcc66d0" data-id="player-7cca3577-56a6-4f17-6fc5-b0676dcc66d0"></div></div><a src="//vs.youmaker.com/assets/player/7cca3577-56a6-4f17-6fc5-b0676dcc66d0?r=16x9&amp;s=720x480&&api=7&logo=true&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F7%2F10%2Fn10550388.md#1"></a></p>
 <p>马偕纪念医院国际医疗中心主任徐永伟提到：“在吉里巴斯的医疗，他们专科医师人数目前也不够，还有医疗设备都不够的情况下，病况比较严重的病人他需要做后续转诊治疗，所以尤其是在心脏病的病人，因为当地环境卫生比较差，所以普遍都有风湿性心脏病。”</p>
 <p>马偕医院深耕吉里巴斯11年，并组成医疗团队，从2007年开始安排吉国病人转诊到台湾，提供专业诊治，而转诊至马偕医院的病患有近五成都是心脏相关疾病。吉里巴斯的一名小婴儿奈威在两个月大时，被诊断出罹患心脏大动脉转位，转诊来台湾治疗，医疗团队进行长达11小时的手术，才挽回奈威的性命。</p>
 <p>马偕儿童医院心脏外科医师张重义说：“他是很严重的先天心脏病，大血管转位，他出生全身是发紫的。因为他脏的血跑到身体，干净的血跑到肺部去。”</p>
@@ -23,42 +21,47 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/5/17/n10401665.md#1">不打悲情牌 卫福部率团去WHA 展医疗软实力</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/5/24/n10420695.md#1">世界看见台湾  蔡英文录影片感谢</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/6/21/n10503070.md#1">台湾医疗展秀智慧医疗软实力 吸引国际买主</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/6/28/n10519448.md#1">去年投580亿元 中共监控新疆民众费用爆增</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/6/29/n10523925.md#1">台湾故宫书画四展 洞见古人养生寻道梦</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/7/9/n10547530.md#1">赖揆：将投506亿建设屏东交通 医疗 自来水</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/29/n12069784.md#1">台援加国口罩不忘当地原住民 政院发言人Kolas是推手</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/28/n12066130.md#1">美卫生部长与陈时中热线30分 挺台参与WHO</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064685.md#1">海外侨界 85人染疫24人过世</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/25/n12060639.md#1">林薇再次拍片挺身护台 盼世界与台湾携手抗疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/17/n10401665.md#1">不打悲情牌 卫福部率团去WHA 展医疗软实力</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/24/n10420695.md#1">世界看见台湾  蔡英文录影片感谢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/21/n10503070.md#1">台湾医疗展秀智慧医疗软实力 吸引国际买主</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/28/n10519448.md#1">去年投580亿元 中共监控新疆民众费用爆增</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/29/n10523925.md#1">台湾故宫书画四展 洞见古人养生寻道梦</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/7/9/n10547530.md#1">赖揆：将投506亿建设屏东交通 医疗 自来水</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680270.md#1">美民主基金会长见蔡英文：与台湾站一起</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680110.md#1">美参院通过竞争法 促美台军事文化外交往来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679384.md#1">接见美国民主基金会长 苏贞昌：全球民主伙伴团结合作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672884.md#1">支持印太和平稳定 马绍尔外长：台美是忠实盟友</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196766.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(2)</a></li><li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403595.md#1" target="_blank">林辉：中共高官披露内幕 毛奢侈嫉妒唯我独尊</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065545.md#1">董卿刚刚辟谣 其老公密春雷“暴富史”被扒</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065576.md#1">专家：金正恩可能在视察导弹试射时受伤</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/28/n12068456.md#1">疫情追查 传五眼联盟在调查石正丽周鹏</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064980.md#1">【新闻看点】庚子年忧思疯传 北京麻烦有多少？</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065639.md#1">【独家】大疫曝中共监控民众的保密渠道</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/26/n12062937.md#1">周星驰近况曝光 与林允隔空互动笑翻网络</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065497.md#1">罗志祥丑闻引抵制风波 陆综近亿酬金或成泡影</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064217.md#1">流浪猫带路人去买食物给它吃 结果被收养</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/28/n12068100.md#1">台湾连续三天零确诊 林志玲用逗趣谐音表心情</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/26/n12062791.md#1">圈内人相继染疫离世 日本名导北野武萌生退意</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/25/n12060433.md#1">为着神意而战 巴顿将军的为将之道</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/24/n12059475.md#1">【历史上的瘟疫】终结王莽新朝的大瘟疫</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/4/n12002808.md#1">仙境一来回九十年 采药人得寿五千年</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/19/n12044233.md#1">【历史上的瘟疫】科技难挡19世纪霍乱</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/3/n11999664.md#1">天地清明引(271) 众生劫－王终见王1</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ldrwvv219/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ldrwvv219/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/7/10/n10550388.htm">医疗外交添佳话 马偕医院救援友邦重症男婴</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/7/10/n10550388.htm">医疗外交添佳话 马偕医院救援友邦重症男婴</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ldrwvv219/djy/blob/master/gb/18/7/10/n10550388.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ldrwvv219/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ldrwvv219/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/18/7/10/n10550388.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
